# CartaOS

./: .flutter-plugins-dependencies  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PR_DESCRIPTION.md  QWEN.md  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SETUP.md  STYLE_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md  USE_CASES.md  docker-compose.yml  install-dev-env.sh  l10n.yaml  package-lock.json  package.json  pr_45_analysis.md  pubspec.yaml  setup_github_milestones.sh  setup_github_project.sh
.dart_tool/: package_config.json  package_graph.json
.github/: dependabot.yml  lighthouserc.json
backend/: .coveragerc  .env.example  .mutmut-cache  Dockerfile  README.md  coverage.xml  go.mod  pyproject.toml  requirements.txt  run_checks.sh  setup_dev_env.sh
backend/app/: main.py
backend/cartaos/: __init__.py  app_config.py  cli.py  config.py  install-dev-env.py  lab.py  logging_config.py  ocr.py  processor.py  triage.py  utils.py
backend/cartaos/api/: __init__.py  logging_config.py  models.py  server.py
backend/cartaos/api/middleware/: enhanced_logging_middleware.py  logging_middleware.py
backend/cartaos/install_dev_env/: __main__.py  cli.py  config.py  installer.py  shell_utils.py  simplified_installer.py
backend/cartaos/processing/: decorators.py
backend/cartaos/processors/: __init__.py  ocr_processor.py  summarizer.py
backend/cartaos/prompts/: summary_prompt.md
backend/cartaos/security/: audit_logger.py
backend/cartaos/tasks/: base.py
backend/cartaos/utils/: ai_utils.py  external_calls.py  image_utils.py  keychain.py  logging_utils.py  ocr_utils.py  pdf_utils.py  text_utils.py  triage.py  utils.py
backend/cmd/server/: main.go
backend/internal/pipeline/: text_extraction.go  text_extraction_test.go
backend/internal/server/http/: pipeline_handler.go
backend/internal/services/: pipeline_service.go
backend/scripts/: create_test_pdf.py  test_ocr.py  test_ocr_processor.py  test_pipeline.py
backend/test_output/: test_document.txt  test_document_ocr_result.txt
backend/test_pipeline_output/summaries/: test-document.md
backend/tests/: conftest.py  test_ai_utils.py  test_api_middleware.py  test_api_server.py  test_cli.py  test_cli_extended.py  test_cli_json.py  test_cli_json_ocr_sum.py  test_cli_more.py  test_config.py  test_content_aware_triage.py  test_documentation_completeness.py  test_env_standardization.py  test_external_calls_timeout.py  test_i18n_consistency.py  test_installer_core.py  test_installer_ensure_tool.py  test_installer_more.py  test_installer_run_all.py  test_integration_pipeline.py  test_integration_pipeline_variants.py  test_lab.py  test_lab_branches.py  test_lab_more.py  test_logging_utils.py  test_ocr.py  test_ocr_more.py  test_ocr_progress.py  test_pdf_utils.py  test_pdf_utils_even_more.py  test_pdf_utils_more.py  test_process_endpoint.py  test_process_endpoint_fixed.py  test_process_endpoint_fixed2.py  test_process_endpoint_simple.py  test_processor.py  test_processor_edge_cases.py  test_processor_modes.py  test_processor_more.py  test_processor_paths.py  (+13 more)
backend/tests/processors/: test_ocr_processor.py
backend/tests/scripts/: test_pipeline.py
docs/: 01-Value-Proposition.md  02-Vision-Document.md  03-MVP-and-Requirements.md  04-Product-Roadmap.md  05-System-Architecture.md  06-Database-Schema.md  07-Technology-Stack.md  08-Wireframes.md  09-User-Personas-and-Stories.md  10-Architecture-Decision-Records.md  11-Internal-API-Specification.md  12-Testing-and-Quality-Strategy.md  13-Contribution-Guide.md  14-Monetization-and-Subscription-Tiers.md  15-Plugin-API-Documentation.md  16-Go-To-Market-Strategy.md  17-Design-System-and-UI-UX-Style-Guide.md  18-Privacy-Policy-and-ToS.md  19-Security-Threat-Model.md  20-Disaster-Recovery-Plan.md  ADR-001-Flutter-for-Frontend.md  ADR-002-Pivo-Tecnologico-Python-Tauri.md  CONTRIBUTING.md  LOGGING.md  POSTPR.md  STYLEGUIDE.md  WORKFLOW.md  branch-protection.md
frontend/: PERFORMANCE.md  VISUAL_REGRESSION.md  eslint.config.js  global.d.ts  index.html  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
scripts/: run_all.sh  setup-dev-branch.sh
src-tauri/: Cargo.toml  tauri.conf.json
test/: document_detail_screen_test.dart  document_detail_screen_test.dart.bak  document_model_test.dart  export_service_test.dart  export_service_test.mocks.dart  login_screen_test.dart  registration_screen_test.dart
v0.1.0/: 2025-08-12  CartaOS 0.1.0.txt
(+117 files in other folders)
