# pyproject.toml

# Define os metadados principais do projeto.
[tool.poetry]
name = "cartaos"
version = "0.1.0"
description = "CartaOS - Core processing engine for academic documents."
authors     = ["Luis <lfgranjaead+cartaOS@gmail.com>"]
packages = [
    {include = "cartaos"}
]

license = "AGPL-3.0"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12"
typer = { version = ">=0.12.3", extras = ["rich"] }
pdfplumber = ">=0.11.1"
PyMuPDF = ">=1.24.9"
pdf2image = ">=1.17.0"
Pillow = ">=10.4.0"
pytesseract = ">=0.3.13"
google-genai = "^1.2.9"
python-dotenv = ">=1.0.1"
PyYAML = ">=6.0.1"
python-slugify = ">=8.0.4"
loguru = ">=0.7.2"
rich = ">=14.1.0,<15.0.0"
typing-extensions = ">=4.14.1,<5.0.0"
img2pdf = ">=0.6.1,<0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cartaos = "cartaos.cli:app"