# pyproject.toml

# Define os metadados principais do projeto.
[tool.poetry]
name = "cartaos"
version = "0.1.0"
description = "CartaOS - Core processing engine for academic documents."
authors     = ["Luis <lfgranjaead+cartaOS@gmail.com>"]
packages = [
    {include = "cartaos"}
]

license = "AGPL-3.0"
readme = "../README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
typer = { version = ">=0.12.3", extras = ["rich"] }
pdfplumber = ">=0.11.1"
PyMuPDF = ">=1.24.9"
pdf2image = ">=1.17.0"
Pillow = ">=10.4.0"
pytesseract = ">=0.3.13"
google-genai = "^1.2.9"
python-dotenv = ">=1.0.1"
PyYAML = ">=6.0.1"
python-slugify = ">=8.0.4"
loguru = ">=0.7.2"
rich = ">=14.1.0,<15.0.0"
typing-extensions = ">=4.14.1,<5.0.0"
img2pdf = ">=0.6.1,<0.7.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
keyring = "^25.6.0"
tenacity = "^9.1.2"
httpx = "^0.28.1"
pytest-asyncio = "^1.1.0"
# Security pin to address PYSEC-2020-100 in rsa <4.7 (transitive via google-auth)
rsa = ">=4.7,<5.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
flake8-pytest-style = "^2.1.0"
black = "^24.4.2"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
mutmut = "^2.5.1"
mypy = "^1.11.2"
ruff = "^0.6.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cartaos = "cartaos.cli:app"

[tool.pytest.ini_options]
filterwarnings = [
  # silencia todos os DeprecationWarning que mencionem SwigPy.* sem __module__
  "ignore:.*builtin type SwigPy.* has no __module__ attribute:DeprecationWarning",
  "ignore:.*builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.mutmut]
# Mutate only core modules; exclude installer tooling for now
paths_to_mutate = [
  "cartaos/processor.py",
  "cartaos/triage.py",
  "cartaos/utils/pdf_utils.py",
]
# Explicit exclude patterns
exclude = [
  "cartaos/install_dev_env/*",
]
tests_dir = "tests"
backup = false
runner = "pytest -q"
use_coverage = true
# Optional: increase timeout per mutant (seconds)
# timeout_factor = 2.0

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
pretty = true
show_error_codes = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "I001", "F401", "E741", "E722"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["F401", "F841"]
